# proxy

./: .gitignore  CHANGELOG.md  Cargo.toml  canbench.yml  dfx.json
.github/workflows/: build.yml  development.yml  production.yml  staging.yml
candid/: canister.did  proxy.did
scripts/: build.sh  get_principals.sh  get_profiles.sh
src/canister/: Cargo.toml
src/canister/src/: benches.rs  lib.rs
src/canister/src/calls/: boost_calls.rs  event_calls.rs  group_calls.rs  history_calls.rs  log_calls.rs  mod.rs  notification_calls.rs  profile_calls.rs  report_calls.rs  reward_calls.rs  topic_calls.rs
src/canister/src/helpers/: group_permission.rs  guards.rs  validator.rs
src/canister/src/logic/: attendee_logic.rs  boost_logic.rs  event_logic.rs  friend_request_logic.rs  group_logic.rs  ledger_logic.rs  logger_logic.rs  member_logic.rs  mod.rs  notification_logic.rs  profile_logic.rs  report_logic.rs  reward_logic.rs  topic_logic.rs
src/canister/src/migration/old_models/: event_models.rs  group_model.rs  profile_models.rs
src/canister/src/storage/: cell_api.rs  logger_storage.rs  storage_api.rs
src/canister_types/: Cargo.toml
src/canister_types/src/misc/: role_misc.rs
src/canister_types/src/models/: api_error.rs  asset.rs  date_range.rs  event.rs  event_collection.rs  group.rs  group_transfer_request.rs  icrc28_trusted_origin.rs  identifier.rs  invite_type.rs  location.rs  member.rs  member_collection.rs  mod.rs  permission.rs  privacy.rs  profile.rs  profile_privacy.rs  referral.rs  report.rs  reward.rs  role.rs  sort_direction.rs  storage.rs  subject.rs  topic.rs  user_notifications.rs  validation.rs  wallet.rs  websocket_message.rs
src/proxy/: Cargo.toml  lib.rs
src/proxy/calls/: generic_calls.rs  group_calls.rs  migration_calls.rs  mod.rs  profile_calls.rs
src/proxy/logic/: group_logic.rs  profile_logic.rs  reward_buffer_logic.rs  websocket_logic.rs
src/proxy/src/: lib.rs
src/proxy/src/calls/: event_calls.rs  generic_calls.rs  group_calls.rs  profile_calls.rs
src/proxy/src/helpers/: guards.rs
src/proxy/src/logic/: event_logic.rs  group_logic.rs  profile_logic.rs  reward_buffer_logic.rs  websocket_logic.rs
src/proxy/src/storage/: group_transfer_request_storage.rs  mod.rs  referral_storage.rs  (+2 more)
src/proxy/storage/: group_members_storage.rs  mod.rs  reward_storage.rs
src/proxy/tests/: airdrop_test.rs  reward_test.rs
src/stress_test/: Cargo.toml  principal_for_identity2.txt
src/stress_test/src/: main.rs
src/test/: Cargo.toml
src/test/src/: flow1.rs  lib.rs
src/test/src/calls/: boost_calls.rs  event_calls.rs  group_calls.rs  profile_calls.rs  report_calls.rs
src/test/src/mocks/: principals.rs
src/test_helper/: Cargo.toml  context.rs  sender.rs  utils.rs
tests/: Cargo.toml
tests/src/: lib.rs  profile.rs  utils.rs
tests/src/calls/: mod.rs  profile.rs
