[package]
name = "canister"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
canister_types.workspace = true
test.workspace = true

candid.workspace = true
ic-cdk.workspace = true
ic-ledger-types.workspace = true

serde.workspace = true
serde_json.workspace = true

ic-stable-structures = "0.6.1"
ic-websocket-cdk = "0.3.4"
ic-cdk-timers = "0.6.0"
email_address = "0.2.4"

canbench-rs = { version = "0.1.1", optional = true }
# test = { path = "../test" }
