[package]
name = "canister_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-ledger-types.workspace = true


serde.workspace = true
serde_json.workspace = true

ic-stable-structures = "0.6.1"

email_address = "0.2.4"
