[package]
name = "stress_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.10.5"
ic-agent = "0.34.0"
ic-utils = "0.34.0"
tokio = { version = "1.36.0", features = ["macros"] }

canister_types = { path = "../canister_types" }
futures = "0.3.30"
# test = { path = "../test" }
