[package]
name = "test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
canister_types.workspace = true

candid.workspace = true
ic-cdk.workspace = true

ic-agent = { version = "^0.34.0", features = ["wasm-bindgen"] }
# pocket-ic = "^2.0"
lazy_static = "^1.4.0"

getrandom = { version = "0.2", features = ["custom"] }
